Updates to reflect recent changes to k3d setup

--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -43,23 +43,15 @@ services:
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
       - DIVBASE_S3_ACCESS_KEY=minioadmin
       - DIVBASE_S3_SECRET_KEY=badpassword
-    develop: &watch-celery-src
-      watch:
-        - action: sync+restart
-          path: ../packages/divbase-worker/src
-          target:  /app/packages/divbase-worker/src
-        - action: sync+restart
-          path: ../packages/divbase-lib/src
-          target:  /app/packages/divbase-lib/src
-        - action: rebuild
-          path: ../uv.lock
+    volumes: &worker-volumes
+      - ../src:/app/src
     command: ["-Q", "quick,celery", "--hostname=worker-quick@%h", "--concurrency=4"] #-Q "celery" is the default queue, so let the quick worker also handle it to avoid issues with tasks not being picked up
   worker-long:
     build: *worker-build
     healthcheck: *worker-healthcheck
     depends_on: *worker-depends
     environment: *worker-env
-    develop: *watch-celery-src
+    volumes: *worker-volumes
     command: ["-Q", "long", "--hostname=worker-long@%h", "--concurrency=4"]
   flower:
     build:
@@ -72,13 +64,20 @@ services:
       retries: 5
     ports:
       - 5555:5555
-    depends_on: *worker-depends
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
       - CELERY_BROKER_URL=pyamqp://guest@rabbitmq:5672//
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
       - FLOWER_BASIC_AUTH=floweradmin:badpassword
-    develop: *watch-celery-src
-    command: ["flower", "--persistent=True", "--db=/data/flower.db"]
+    command: [
+      "flower", 
+      "--persistent=True",
+      "--db=/data/flower.db",
+      ]
     volumes:
       - flower-data:/data
   minio:
@@ -106,20 +105,6 @@ services:
       dockerfile: docker/fastapi.dockerfile
     ports:
       - 8000:8000
-    command: ["fastapi", "dev", "--host", "0.0.0.0", "/app/packages/divbase-api/src/divbase_api/divbase_api.py"]
-    develop: # rebuild only on changes to deps. 
-      watch:
-        - action: sync
-          path: ../packages/divbase-api/src
-          target: /app/packages/divbase-api/src
-        - action: sync
-          path: ../packages/divbase-worker/src
-          target: /app/packages/divbase-worker/src
-        - action: sync
-          path: ../packages/divbase-lib/src
-          target: /app/packages/divbase-lib/src
-        - action: rebuild
-          path: ../uv.lock
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 5s
