--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -121,7 +121,7 @@ services:
         - action: rebuild
           path: ../uv.lock
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/api/health"]
       interval: 5s
       timeout: 5s
       retries: 5
