--- a/.github/workflows/publish_images.yaml
+++ b/.github/workflows/publish_images.yaml
@@ -56,7 +56,7 @@ jobs:
       - name: Set Docker tag
         id: set-tag
         run: |
-          ./set_docker_tag ${{ github.event_name }} \
+          ./set_docker_tag.sh ${{ github.event_name }} \
                            ${{ github.ref_name }} \
                            ${{ github.sha }} \
                            ${{ github.event.inputs.docker_tag }} \
