set pytest env vars in pytest.ini file
skip having to worry about putting a env var ahead of the pytest command.
much nicer for us devs. :)

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,3 +7,8 @@ markers =
     unit: marks unit tests
     integration: marks tests components, modules, or services are tested together to verify they work as expected when combined.
     e2e: marks tests that verify the end-to-end functionality of the application, ensuring all components work together as intended.
+env =
+    TEST_CONFIG_PATH=tests/fixtures/tmp/config.yaml
+    TEST_TOKEN_PATH=tests/fixtures/tmp/.fakesecrets
+    DIVBASE_API_URL=http://localhost:8001/api
+    DIVBASE_S3_URL=http://localhost:9002
