--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ members = [
 dev = [
     "pytest>=8.4.0",
     "pre-commit>=3.7.0",
+    "pytest-env>=1.1.5",
 ]
 benchmarking = [
     "scipy>=1.16.0",
