Use multi-stage builds and drop -e for pip install
This almost cuts the image sizes in half. The key was to drop editable
mode from pip install, since that requires that both the source code
and the installed packages are in the image. Reduced code duplication is
good. But it seems that hot-reloading with Docker Compose watch needs
pip install -e, so that might be lost.

--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -106,7 +106,7 @@ services:
       dockerfile: docker/fastapi.dockerfile
     ports:
       - 8000:8000
-    command: ["fastapi", "dev", "--host", "0.0.0.0", "/app/packages/divbase-api/src/divbase_api/divbase_api.py"]
+    command: ["fastapi", "dev", "--host", "0.0.0.0", "/usr/local/lib/python3.12/site-packages/divbase_api/divbase_api.py"]
     develop: # rebuild only on changes to deps. 
       watch:
         - action: sync
