--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -136,6 +136,8 @@ services:
     - JWT_SECRET_KEY=a-string-secret-at-least-256-bits-long
     - FIRST_ADMIN_EMAIL=admin@divbase.com
     - FIRST_ADMIN_PASSWORD=badpassword
+    - S3_ACCESS_KEY=minioadmin
+    - S3_SECRET_KEY=badpassword
     depends_on:
       rabbitmq:
         condition: service_healthy
