--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -46,11 +46,11 @@ services:
     develop: &watch-celery-src
       watch:
         - action: sync+restart
-          path: ../packages/divbase-worker/src
-          target:  /app/packages/divbase-worker/src
+          path: ../packages/divbase-worker/src/divbase_worker/
+          target: /usr/local/lib/python3.12/site-packages/divbase_worker/
         - action: sync+restart
-          path: ../packages/divbase-lib/src
-          target:  /app/packages/divbase-lib/src
+          path: ../packages/divbase-lib/src/divbase_lib/
+          target: /usr/local/lib/python3.12/site-packages/divbase_lib/
         - action: rebuild
           path: ../uv.lock
     command: ["-Q", "quick,celery", "--hostname=worker-quick@%h", "--concurrency=4"] #-Q "celery" is the default queue, so let the quick worker also handle it to avoid issues with tasks not being picked up
@@ -106,18 +106,18 @@ services:
       dockerfile: docker/fastapi.dockerfile
     ports:
       - 8000:8000
-    command: ["fastapi", "dev", "--host", "0.0.0.0", "/app/packages/divbase-api/src/divbase_api/divbase_api.py"]
+    command: ["fastapi", "dev", "--host", "0.0.0.0", "/usr/local/lib/python3.12/site-packages/divbase_api/divbase_api.py"]
     develop: # rebuild only on changes to deps. 
       watch:
-        - action: sync
-          path: ../packages/divbase-api/src
-          target: /app/packages/divbase-api/src
-        - action: sync
-          path: ../packages/divbase-worker/src
-          target: /app/packages/divbase-worker/src
-        - action: sync
-          path: ../packages/divbase-lib/src
-          target: /app/packages/divbase-lib/src
+        - action: sync+restart
+          path: ../packages/divbase-api/src/divbase_api/
+          target: /usr/local/lib/python3.12/site-packages/divbase_api/
+        - action: sync+restart
+          path: ../packages/divbase-worker/src/divbase_worker/
+          target: /usr/local/lib/python3.12/site-packages/divbase_worker/
+        - action: sync+restart
+          path: ../packages/divbase-lib/src/divbase_lib/
+          target: /usr/local/lib/python3.12/site-packages/divbase_lib/
         - action: rebuild
           path: ../uv.lock
     healthcheck:
