Make tests work with new pre-signed url approach
All ops that rely on using download/list/upload file commands etc...
now need a signed in user with appropriate project access.

To get the enviroment variables registered into the API config (for S3 internal + external URLs),
needed to add them to the docker-compose override file (conftest to late).

Probably need to move all env variables for testing into the override file - so in one place,
like we have local dev.

--- a/docker/divbase_compose.tests.yaml
+++ b/docker/divbase_compose.tests.yaml
@@ -35,6 +35,9 @@ services:
     develop: !reset [] 
     ports: !override
       - 8001:8000
+    environment:
+      - S3_EXTERNAL_URL=http://localhost:9002
+      - S3_INTERNAL_URL=http://minio:9000
   postgres:
     ports: !override
       - "5433:5432"
