--- a/packages/divbase-api/pyproject.toml
+++ b/packages/divbase-api/pyproject.toml
@@ -4,16 +4,15 @@ version = "0.1.0"
 readme = "../../README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi[standard]>=0.115.12",
-    "uvicorn>=0.34.3",
-    "httpx>=0.28.1",
-    "sqlalchemy[asyncio]>=2.0.43",
+    "fastapi[standard]>=0.115.12,<0.116",
+    "uvicorn>=0.34.3,<1",
+    "httpx>=0.28.1,<1",
+    "sqlalchemy[asyncio]>=2.0.43,<3",
+    "asyncpg>=0.30.0,<1",
+    "pyjwt>=2.10.1,<3",
+    "pwdlib[argon2]>=0.2.1,<1",
     "divbase-lib",
     "divbase-worker",
-    "asyncpg>=0.30.0",
-    "passlib[bcrypt]>=1.7.4",
-    "pyjwt>=2.10.1",
-    "bcrypt==4.3.0",
 ]
 
 [build-system]
