--- a/packages/divbase-api/pyproject.toml
+++ b/packages/divbase-api/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "asyncpg>=0.30.0,<1",
     "pyjwt>=2.10.1,<3",
     "pwdlib[argon2]>=0.2.1,<1",
+    "starlette-admin>=0.15.1,<1",
     "divbase-lib",
     "divbase-worker",
 ]
