--- a/packages/divbase-api/pyproject.toml
+++ b/packages/divbase-api/pyproject.toml
@@ -12,8 +12,11 @@ dependencies = [
     "pyjwt>=2.10.1,<3",
     "pwdlib[argon2]>=0.2.1,<1",
     "starlette-admin>=0.15.1,<1",
+    "emails>=0.6,<1",
+    "jinja2>=3.1.6,<4",
     "divbase-lib",
     "divbase-worker",
+
 ]
 
 [build-system]
