config tests so can do unit tests for api

--- a/docker/divbase_compose.tests.yaml
+++ b/docker/divbase_compose.tests.yaml
@@ -44,3 +44,10 @@ services:
     volumes: !reset []
     tmpfs:
       - /var/lib/postgresql/data/pgdata
+  mailpit:
+    ports: !override
+      - "1026:1025"
+      - "8026:8025"
+    volumes: !reset []
+    tmpfs:
+      - /data/
