--- a/pytest.ini
+++ b/pytest.ini
@@ -8,7 +8,21 @@ markers =
     integration: marks tests components, modules, or services are tested together to verify they work as expected when combined.
     e2e: marks tests that verify the end-to-end functionality of the application, ensuring all components work together as intended.
 env =
+    # divbase-cli test settings
     DIVBASE_CONFIG_PATH=tests/fixtures/tmp/config.yaml
     DIVBASE_TOKENS_PATH=tests/fixtures/tmp/.fakesecrets
     DIVBASE_API_URL=http://localhost:8001/api
     DIVBASE_S3_URL=http://localhost:9002
+    # divbase-api test settings (used by unit tests)
+    DIVBASE_ENV=test
+    FRONTEND_BASE_URL=http://localhost:8001
+    FLOWER_USER=floweradmin
+    FLOWER_PASSWORD=badpassword
+    CELERY_BROKER_URL=pyamqp://guest@rabbitmq:5672//
+    CELERY_RESULT_BACKEND=redis://redis:6379/0
+    DATABASE_URL=postgresql+asyncpg://divbase_user:badpassword@postgres:5432/divbase_db
+    JWT_SECRET_KEY=a-string-secret-at-least-256-bits-long
+    FIRST_ADMIN_EMAIL=admin@divbase.com
+    FIRST_ADMIN_PASSWORD=badpassword
+    S3_ACCESS_KEY=minioadmin
+    S3_SECRET_KEY=badpassword
