--- a/packages/divbase-api/pyproject.toml
+++ b/packages/divbase-api/pyproject.toml
@@ -11,8 +11,10 @@ dependencies = [
     "asyncpg>=0.30.0,<1",
     "pyjwt>=2.10.1,<3",
     "pwdlib[argon2]>=0.2.1,<1",
+    "celery>=5.5.3,<6",
+    "redis>=4.5.0,<5",
+    "flower>=2.0.0,<3",
     "divbase-lib",
-    "divbase-worker",
 ]
 
 [build-system]
