--- a/packages/divbase-api/pyproject.toml
+++ b/packages/divbase-api/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "redis>=4.5.0,<5",
     "flower>=2.0.0,<3",
     "divbase-lib",
+    "psycopg[binary]>=3.2.12,<4",
 ]
 
 [build-system]
