Move testing stack env vars to pytest.ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -18,9 +18,11 @@ env =
     FRONTEND_BASE_URL=http://localhost:8001
     FLOWER_USER=floweradmin
     FLOWER_PASSWORD=badpassword
-    CELERY_BROKER_URL=pyamqp://guest@rabbitmq:5672//
-    CELERY_RESULT_BACKEND=redis://redis:6379/0
-    DATABASE_URL=postgresql+asyncpg://divbase_user:badpassword@postgres:5432/divbase_db
+    FLOWER_BASE_URL=http://localhost:5556
+    CELERY_BROKER_URL=pyamqp://guest@localhost:5673//
+    CELERY_RESULT_BACKEND=redis://localhost:6380/0
+    DATABASE_URL=postgresql+asyncpg://divbase_user:badpassword@localhost:5433/divbase_db
+    WORKER_DATABASE_URL=postgresql+psycopg://divbase_user:badpassword@localhost:5433/divbase_db
     JWT_SECRET_KEY=a-string-secret-at-least-256-bits-long
     FIRST_ADMIN_EMAIL=admin@divbase.com
     FIRST_ADMIN_PASSWORD=badpassword
