--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -41,8 +41,6 @@ services:
     environment: &worker-env
       - CELERY_BROKER_URL=pyamqp://guest@rabbitmq:5672//
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
-      - DIVBASE_S3_ACCESS_KEY=minioadmin
-      - DIVBASE_S3_SECRET_KEY=badpassword
       - DATABASE_URL=postgresql+asyncpg://divbase_user:badpassword@postgres:5432/divbase_db
       - WORKER_DATABASE_URL=postgresql+psycopg://divbase_user:badpassword@postgres:5432/divbase_db
       - FLOWER_HOST=http://flower:5555 # Use the service name as the host for fastAPI to access Flower
@@ -51,8 +49,8 @@ services:
       - JWT_SECRET_KEY=a-string-secret-at-least-256-bits-long
       - FIRST_ADMIN_EMAIL=admin@divbase.com
       - FIRST_ADMIN_PASSWORD=badpassword
-      - S3_ACCESS_KEY=minioadmin
-      - S3_SECRET_KEY=badpassword
+      - S3_SERVICE_ACCOUNT_ACCESS_KEY=s3-service-account
+      - S3_SERVICE_ACCOUNT_SECRET_KEY=badpassword
     develop: &watch-celery-src
       watch:
         - action: sync+restart
@@ -96,8 +94,8 @@ services:
       - JWT_SECRET_KEY=a-string-secret-at-least-256-bits-long
       - FIRST_ADMIN_EMAIL=admin@divbase.com
       - FIRST_ADMIN_PASSWORD=badpassword
-      - S3_ACCESS_KEY=minioadmin
-      - S3_SECRET_KEY=badpassword
+      - S3_SERVICE_ACCOUNT_ACCESS_KEY=s3-service-account
+      - S3_SERVICE_ACCOUNT_SECRET_KEY=badpassword
     develop: *watch-celery-src
     command: ["flower", "--persistent=True", "--db=/data/flower.db"]
     volumes:
@@ -121,6 +119,25 @@ services:
       - minio-data:/data
       - minio-bitnami-data:/bitnami/minio/data #to avoid anonymous volumes being created
       - minio-certs:/certs #to avoid anonymous volumes being created
+  minio-setup: # Create the service account 
+    image: bitnamilegacy/minio-client:2025.7.21-debian-12-r3
+    depends_on:
+      minio:
+        condition: service_healthy
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=badpassword
+      - SERVICE_ACCOUNT_ACCESS_KEY=s3-service-account
+      - SERVICE_ACCOUNT_SECRET_KEY=badpassword
+    volumes:
+      - ./s3_service_account_policy.json:/tmp/minio-policy.json:ro
+    entrypoint: >
+      /bin/sh -c "
+      mc alias set minio http://minio:9000 minioadmin badpassword;
+      mc admin policy create minio divbase-policy /tmp/minio-policy.json;
+      mc admin user add minio s3-service-account badpassword;
+      mc admin policy attach minio divbase-policy --user s3-service-account;
+      "
   fastapi:
     build:
       context: ..
@@ -157,8 +174,8 @@ services:
     - JWT_SECRET_KEY=a-string-secret-at-least-256-bits-long
     - FIRST_ADMIN_EMAIL=admin@divbase.com
     - FIRST_ADMIN_PASSWORD=badpassword
-    - S3_ACCESS_KEY=minioadmin
-    - S3_SECRET_KEY=badpassword
+    - S3_SERVICE_ACCOUNT_ACCESS_KEY=s3-service-account
+    - S3_SERVICE_ACCOUNT_SECRET_KEY=badpassword
     depends_on:
       rabbitmq:
         condition: service_healthy
