--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -1,4 +1,10 @@
 name: divbase
+networks:
+  # Simulate S3 living outside remainder of services
+  internal:
+    driver: bridge
+  external-s3:
+    driver: bridge
 services:
   rabbitmq:
     image: "rabbitmq:alpine"
@@ -11,6 +17,8 @@ services:
       - 5672:5672
     volumes:
       - rabbitmq-data:/var/lib/rabbitmq #to avoid anonymous volumes being created
+    networks: &internal-network
+      - internal 
   redis:
     image: redis:alpine
     healthcheck:
@@ -23,6 +31,7 @@ services:
     volumes:
       - redis-data:/data
     command: redis-server --appendonly yes
+    networks: *internal-network
   worker-quick:
     build: &worker-build
       context: .. 
@@ -62,6 +71,7 @@ services:
         - action: rebuild
           path: ../uv.lock
     command: ["-Q", "quick,celery", "--hostname=worker-quick@%h", "--concurrency=4"] #-Q "celery" is the default queue, so let the quick worker also handle it to avoid issues with tasks not being picked up
+    networks: *internal-network
   worker-long:
     build: *worker-build
     healthcheck: *worker-healthcheck
@@ -69,6 +79,7 @@ services:
     environment: *worker-env
     develop: *watch-celery-src
     command: ["-Q", "long", "--hostname=worker-long@%h", "--concurrency=4"]
+    networks: *internal-network
   flower:
     build:
       context: ..
@@ -100,6 +111,7 @@ services:
     command: ["flower", "--persistent=True", "--db=/data/flower.db"]
     volumes:
       - flower-data:/data
+    networks: *internal-network  
   minio:
     image: bitnamilegacy/minio:2025.7.23-debian-12-r5
     ports:
@@ -119,6 +131,8 @@ services:
       - minio-data:/data
       - minio-bitnami-data:/bitnami/minio/data #to avoid anonymous volumes being created
       - minio-certs:/certs #to avoid anonymous volumes being created
+    networks: &s3-network
+      - external-s3
   minio-setup: # Create the service account 
     image: bitnamilegacy/minio-client:2025.7.21-debian-12-r3
     depends_on:
@@ -131,6 +145,7 @@ services:
       - SERVICE_ACCOUNT_SECRET_KEY=badpassword
     volumes:
       - ./s3_service_account_policy.json:/tmp/minio-policy.json:ro
+    networks: *s3-network
     entrypoint: >
       /bin/sh -c "
       mc alias set minio http://minio:9000 minioadmin badpassword;
@@ -183,6 +198,7 @@ services:
         condition: service_healthy
       postgres:
         condition: service_healthy
+    networks: *internal-network
   postgres:
     image: postgres:17
     ports:
@@ -201,6 +217,7 @@ services:
       - POSTGRES_USER=divbase_user
       - POSTGRES_DB=divbase_db
       - POSTGRES_PASSWORD=badpassword
+    networks: *internal-network
   mailpit:
     image: axllent/mailpit:v1.27
     ports:
@@ -213,6 +230,7 @@ services:
       retries: 3
     volumes:
       - mailpit-data:/data
+    networks: *internal-network
 volumes:
   rabbitmq-data:
   redis-data:
