--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -42,11 +42,15 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
-    depends_on: &worker-depends
+    depends_on: &worker-api-depends
       rabbitmq:
         condition: service_healthy
       redis:
         condition: service_healthy
+      postgres:
+        condition: service_healthy
+      minio-setup:
+        condition: service_completed_successfully
     environment: &worker-env
       - CELERY_BROKER_URL=pyamqp://guest@rabbitmq:5672//
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
@@ -77,7 +81,7 @@ services:
   worker-long:
     build: *worker-build
     healthcheck: *worker-healthcheck
-    depends_on: *worker-depends
+    depends_on: *worker-api-depends
     environment: *worker-env
     develop: *watch-celery-src
     command: ["-Q", "long", "--hostname=worker-long@%h", "--concurrency=4"]
@@ -93,7 +97,7 @@ services:
       retries: 5
     ports:
       - 5555:5555
-    depends_on: *worker-depends
+    depends_on: *worker-api-depends
     environment:
       - CELERY_BROKER_URL=pyamqp://guest@rabbitmq:5672//
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
@@ -140,6 +144,7 @@ services:
     depends_on:
       minio:
         condition: service_healthy
+    restart: on-failure
     environment:
       - MINIO_ROOT_USER=minioadmin
       - MINIO_ROOT_PASSWORD=badpassword
@@ -195,13 +200,7 @@ services:
     - S3_PRESIGNING_URL=http://localhost:9000
     - S3_SERVICE_ACCOUNT_ACCESS_KEY=s3-service-account
     - S3_SERVICE_ACCOUNT_SECRET_KEY=badpassword
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      postgres:
-        condition: service_healthy
+    depends_on: *worker-api-depends
     networks: *internal-network
   postgres:
     image: postgres:17
