--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dev = [
     "pytest>=8.4.0",
     "pre-commit>=3.7.0",
     "pytest-env>=1.1.5",
+    "pytest-playwright>=0.7.2",
 ]
 benchmarking = [
     "scipy>=1.16.0",
