remove env vars not needed by worker/flower
see prior commit for why now possible

--- a/pytest.ini
+++ b/pytest.ini
@@ -12,7 +12,7 @@ env =
     DIVBASE_CONFIG_PATH=tests/fixtures/tmp/config.yaml
     DIVBASE_TOKENS_PATH=tests/fixtures/tmp/.fakesecrets
     DIVBASE_API_URL=http://localhost:8001/api
-    # server (both API and/or worker) test settings (used in unit tests)
+    # API and worker test settings (used in unit tests - as integration/e2e get the settings from docker-compose)
     DIVBASE_ENV=test
     FRONTEND_BASE_URL=http://localhost:8001
     FLOWER_USER=floweradmin
