--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -53,7 +53,7 @@ services:
         condition: service_completed_successfully
     environment: &worker-env
       - CELERY_BROKER_URL=pyamqp://guest@rabbitmq:5672//
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=db+postgresql://divbase_user:badpassword@postgres:5432/divbase_db
       - FLOWER_USER=floweradmin
       - FLOWER_PASSWORD=badpassword
       - WORKER_DATABASE_URL=postgresql+psycopg://divbase_user:badpassword@postgres:5432/divbase_db
@@ -95,7 +95,7 @@ services:
     depends_on: *worker-api-depends
     environment:
       - CELERY_BROKER_URL=pyamqp://guest@rabbitmq:5672//
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=db+postgresql://divbase_user:badpassword@postgres:5432/divbase_db
       - FLOWER_BASIC_AUTH=floweradmin:badpassword
       - WORKER_DATABASE_URL=postgresql+psycopg://divbase_user:badpassword@postgres:5432/divbase_db
     develop: *watch-celery-src
@@ -173,7 +173,7 @@ services:
     - FLOWER_USER=floweradmin
     - FLOWER_PASSWORD=badpassword
     - CELERY_BROKER_URL=pyamqp://guest@rabbitmq:5672//
-    - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    - CELERY_RESULT_BACKEND=db+postgresql://divbase_user:badpassword@postgres:5432/divbase_db
     - DATABASE_URL=postgresql+asyncpg://divbase_user:badpassword@postgres:5432/divbase_db
     - JWT_SECRET_KEY=a-string-secret-at-least-256-bits-long
     - FIRST_ADMIN_EMAIL=admin@divbase.com
