Use psycopg2 as the pg driver for celery backend
Seems that the celery SQLalchemy integration only supports psycopg2 and
not psycopg (v3) which we use for worker sync db access. For now, it
seems to work to have both drivers, but it could be considered if
everything could use psycopg2 instead?

--- a/packages/divbase-api/pyproject.toml
+++ b/packages/divbase-api/pyproject.toml
@@ -18,8 +18,8 @@ dependencies = [
     "redis>=4.5.0,<5",
     "flower>=2.0.0,<3",
     "divbase-lib",
-    "psycopg[binary]>=3.2.12,<4",
-
+    "psycopg[binary]>=3.2.12,<4", # For worker tasks (sync SQLAlchemy)
+    "psycopg2-binary >= 2.9.11,<3"   # For Celery result backend
 ]
 
 [build-system]
