--- a/pytest.ini
+++ b/pytest.ini
@@ -19,7 +19,7 @@ env =
     FLOWER_PASSWORD=badpassword
     FLOWER_BASE_URL=http://localhost:5556
     CELERY_BROKER_URL=pyamqp://guest@localhost:5673//
-    CELERY_RESULT_BACKEND=redis://localhost:6380/0
+    CELERY_RESULT_BACKEND=db+postgresql://divbase_user:badpassword@localhost:5433/divbase_db
     DATABASE_URL=postgresql+asyncpg://divbase_user:badpassword@localhost:5433/divbase_db
     WORKER_DATABASE_URL=postgresql+psycopg://divbase_user:badpassword@localhost:5433/divbase_db
     JWT_SECRET_KEY=a-string-secret-at-least-256-bits-long
