--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -44,6 +44,8 @@ services:
       - S3_PRESIGNING_URL=http://localhost:9000
       - S3_SERVICE_ACCOUNT_ACCESS_KEY=s3-service-account
       - S3_SERVICE_ACCOUNT_SECRET_KEY=badpassword
+      - CRONJOB_USER_EMAIL=system@divbase.internal
+      - CRONJOB_USER_PASSWORD=badpassword
     develop: &watch-celery-src
       watch:
         - action: sync+restart
@@ -137,6 +139,8 @@ services:
     - JWT_SECRET_KEY=a-string-secret-at-least-256-bits-long
     - FIRST_ADMIN_EMAIL=admin@divbase.com
     - FIRST_ADMIN_PASSWORD=badpassword
+    - CRONJOB_USER_EMAIL=system@divbase.internal
+    - CRONJOB_USER_PASSWORD=badpassword
     - S3_ENDPOINT_URL=http://host.docker.internal:9000
     - S3_PRESIGNING_URL=http://localhost:9000
     - S3_SERVICE_ACCOUNT_ACCESS_KEY=s3-service-account
