Use psycopg2 driver for all celery-pg interactions
Results backend only supports psycopg2, whereas the sync calls in
tasks.py used to use psycopg (v3). API still uses asyncpg driver, so
this is only to harmonize the pg driver used by the workers

--- a/packages/divbase-api/pyproject.toml
+++ b/packages/divbase-api/pyproject.toml
@@ -16,8 +16,7 @@ dependencies = [
     "jinja2>=3.1.6,<4",
     "celery>=5.5.3,<6",
     "divbase-lib",
-    "psycopg[binary]>=3.2.12,<4", # For worker tasks (sync SQLAlchemy)
-    "psycopg2-binary >= 2.9.11,<3"   # For Celery result backend
+    "psycopg2-binary >= 2.9.11,<3" 
 ]
 
 [build-system]
