--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dev = [
     "pre-commit>=3.7.0",
     "pytest-env>=1.1.5",
     "pytest-playwright>=0.7.2",
+    "pytest-alembic>=0.12.1",
+    "pytest-mock-resources[docker]>=2.12.4",
 ]
 benchmarking = [
     "scipy>=1.16.0",
