--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ dev = [
     "pytest-playwright>=0.7.2",
     "pytest-alembic>=0.12.1",
     "pytest-mock-resources[docker]>=2.12.4",
+    "mkdocs>=1.6.1",
+    "pymdown-extensions>=10.19.1",
+    "mkdocs-material[imaging]>=9.7.0",
 ]
 benchmarking = [
     "scipy>=1.16.0",
