--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,8 +11,10 @@ repos:
   - id: detect-private-key
   - id: end-of-file-fixer
     files: '^(README.md|docs/)'
+    exclude: '^docs/cli/_auto_generated/' # typer generated files everytime mkdocs build/serve is run
   - id: trailing-whitespace
     files: '^(README.md|docs/)'
+    exclude: '^docs/cli/_auto_generated/'
 
 - repo: https://github.com/igorshubovych/markdownlint-cli
   rev: v0.45.0
@@ -20,6 +22,7 @@ repos:
   - id: markdownlint-fix
     args: ['--config', '.github/.markdownlint.yaml']
     files: '^(README.md|docs)'
+    exclude: '^docs/cli/_auto_generated/'
 
 # for python
 - repo: https://github.com/astral-sh/ruff-pre-commit
