--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -150,6 +150,7 @@ services:
     environment:
     - DIVBASE_ENV=local_dev
     - FRONTEND_BASE_URL=http://localhost:8000
+    - MKDOCS_SITE_URL=http://localhost:8001/divbase 
     - CELERY_BROKER_URL=pyamqp://guest@rabbitmq:5672//
     - CELERY_RESULT_BACKEND=db+postgresql://divbase_user:badpassword@postgres:5432/divbase_db
     - ASYNC_DATABASE_URL=postgresql+asyncpg://divbase_user:badpassword@postgres:5432/divbase_db 
