--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,9 @@
 site_name: DivBase
-site_description: CLI and API documentation for DivBase
+site_description: A service to manage, query and version VCF files and associated sample metadata
 site_url: https://scilifelabdatacentre.github.io/divbase/
 repo_url: https://github.com/ScilifelabDataCentre/divbase
 repo_name: ScilifelabDataCentre/divbase
+dev_addr: localhost:8001
 
 theme:
   name: material
@@ -26,6 +27,8 @@ theme:
       icon: material/lightbulb-outline
       name: Switch to system preference
   features:
+  - content.action.edit
+  - content.action.view
   - content.code.annotate
   - content.code.copy
   - content.footnote.tooltips
@@ -57,10 +60,20 @@ plugins:
   typeset:
 
 nav:
-  - Home: index.md
-  - CLI Guide: 
-    - Getting Started: cli/getting-started.md
-    - divbase-cli: cli/_auto_generated/divbase-cli-overview.md
+  - DivBase: index.md
+  - User Guides:
+    - Overview: user-guides/index.md
+    - Quick Start Guide: user-guides/quick-start.md
+    - Installation: user-guides/installation.md
+    - Account Management: user-guides/account-management.md
+    - Working with VCF Files: user-guides/vcf-files.md
+    - Running Queries: user-guides/running-queries.md
+    - Managing Project Versions: user-guides/project-versioning.md
+    - Troubleshooting: user-guides/troubleshooting.md
+    - Using DivBase CLI: user-guides/using_divbase_cli.md
+  - CLI Command Reference: 
+    - Overview: cli/index.md
+    - divbase-cli: cli/_auto_generated/divbase-cli.md
     - divbase-cli config: cli/_auto_generated/config.md
     - divbase-cli auth: cli/_auto_generated/auth.md
     - divbase-cli files: cli/_auto_generated/files.md
@@ -68,60 +81,48 @@ nav:
     - divbase-cli version: cli/_auto_generated/version.md
     - divbase-cli dimensions: cli/_auto_generated/dimensions.md
     - divbase-cli task-history: cli/_auto_generated/task-history.md
-  - API Reference:
-    - Overview: api/overview.md
   - Developer Guide: 
-    - Overview: development/overview.md
-    - Database Migrations: development/database_migrations.md
-    - Sending Emails: development/sending_emails.md
- 
+    - Overview: development/index.md
+    - Setup Guide: development/setup.md
+    - API: development/api.md
+    - Contributing: development/contributing.md
+    - Database Migrations: development/database-migrations.md
+    - Deployment: development/deployment.md
+    - Documentation: development/documentation.md
+    - Sending Emails: development/sending-emails.md
+    - Testing: development/testing.md
+  - "Go to DivBase Website": https://divbase.scilifelab.se
+
 hooks:
   - scripts/build_docs.py
 
 markdown_extensions:
-  # Material for MkDocs Extensions
-  material.extensions.preview:
-    targets:
-      include:
-        - "*"
   # Python Markdown
-  abbr:
-  attr_list:
-  footnotes:
-  md_in_html:
-  tables:
-  toc:
-    permalink: true
-
+  - abbr
+  - admonition
+  - attr_list
+  - footnotes
+  - md_in_html
+  - tables
+  - toc:
+      permalink: true
   # Python Markdown Extensions
-  pymdownx.betterem:
-    smart_enable: all
-  pymdownx.caret:
-  pymdownx.highlight:
-    line_spans: __span
-  pymdownx.inlinehilite:
-  pymdownx.keys:
-  pymdownx.mark:
-  pymdownx.tilde:
-
-  # pymdownx blocks
-  pymdownx.blocks.admonition:
-    types:
-    - note
-    - attention
-    - caution
-    - danger
-    - error
-    - tip
-    - hint
-    - warning
-    - info
-    - check
-  pymdownx.blocks.details:
-  pymdownx.blocks.tab:
-    alternate_style: True
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.details
+  - pymdownx.highlight:
+      line_spans: __span
+  - pymdownx.inlinehilite
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.superfences
+  - pymdownx.tilde
 
 extra:
   social:
     - icon: fontawesome/brands/github-alt
-      link: https://github.com/ScilifelabDataCentre/divbase
+      link: https://github.com/ScilifelabDataCentre/divbase   
+    - icon: fontawesome/solid/globe
+      link: https://divbase.scilifelab.se
+      name: Website
