Setup project versioning for all divbase packages
- Set to 0.1.0a1 for initial alpha release
- pyproject.tomls updated to get versioning from the __init__.py file of each package

--- a/packages/divbase-cli/pyproject.toml
+++ b/packages/divbase-cli/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "divbase-cli"
-version = "0.1.0"
+dynamic = ["version"]
 description = "Command Line Interface for Divbase"
 readme = "../../README.md"
 requires-python = ">=3.12"
@@ -13,6 +13,9 @@ dependencies = [
 [build-system]
 requires = ["hatchling >= 1.26"]
 build-backend = "hatchling.build"
+
+[tool.hatch.version]
+path = "src/divbase_cli/__init__.py"
 
 [tool.uv.sources]
 divbase-lib = { workspace = true }
