--- a/packages/divbase-lib/pyproject.toml
+++ b/packages/divbase-lib/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "divbase-lib"
-version = "0.1.0"
+dynamic = ["version"]
 readme = "../../README.md"
 requires-python = ">=3.12"
 dependencies = [
@@ -12,3 +12,6 @@ dependencies = [
 [build-system]
 requires = ["hatchling >= 1.26"]
 build-backend = "hatchling.build"
+
+[tool.hatch.version]
+path = "src/divbase_lib/__init__.py"
