--- a/.github/workflows/publish_docs.yaml
+++ b/.github/workflows/publish_docs.yaml
@@ -17,13 +17,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
-      - uses: actions/setup-python@v6
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
         with:
-          python-version: 3.13
-      - uses: actions/cache@v5
+          version: "0.9.15"
+          enable-cache: true
+
+      - name: Install the project
+        run: uv sync --locked --dev
+
+      - name: Cache mkdocs deps
+        uses: actions/cache@v5
         with: 
           key: ${{ github.ref }}
           path: .cache
-      - run: pip install mkdocs-material
+
       - name: Deploy documentation
-        run: mkdocs gh-deploy --force
+        run: uv run mkdocs gh-deploy --force
