--- a/packages/divbase-lib/pyproject.toml
+++ b/packages/divbase-lib/pyproject.toml
@@ -1,7 +1,11 @@
 [project]
 name = "divbase-lib"
-dynamic = ["version"]
+description = "Library module for Divbase"
 readme = "README.md"
+license = "MIT"
+authors = [
+    { name = "SciLifeLab Data Centre", email = "datacentre@scilifelab.se" },
+]
 requires-python = ">=3.12"
 dependencies = [
     "pyyaml>=6.0.2",
@@ -9,6 +13,25 @@ dependencies = [
     "pandas>=2.2.3",
     "pydantic>=2.12.5"
 ]
+dynamic = ["version"]
+
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Environment :: Console",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+]
+
+[project.urls]
+Homepage = "https://divbase.scilifelab.se"
+Documentation = "https://scilifelabdatacentre.github.io/divbase"
+Repository = "https://github.com/ScilifelabDataCentre/divbase"
+Issues = "https://github.com/ScilifelabDataCentre/divbase/issues"
 
 [build-system]
 requires = ["hatchling >= 1.26"]
