--- a/packages/divbase-api/pyproject.toml
+++ b/packages/divbase-api/pyproject.toml
@@ -4,20 +4,20 @@ dynamic = ["version"]
 readme = "../../README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi[standard]>=0.115.12,<0.116", # TODO - bump 
-    "uvicorn>=0.34.3,<1",
+    "fastapi[standard]>=0.128.0,<1", 
+    "uvicorn>=0.40.0,<1",
     "httpx>=0.28.1,<1",
-    "sqlalchemy[asyncio]>=2.0.43,<3",
     "asyncpg>=0.30.0,<1",
     "pyjwt>=2.10.1,<3",
-    "pwdlib[argon2]>=0.2.1,<1",
-    "starlette-admin>=0.15.1,<1",
+    "pwdlib[argon2]>=0.3.0,<1",
+    "starlette-admin>=0.16.0,<1",
     "emails>=0.6,<1",
     "jinja2>=3.1.6,<4",
-    "celery>=5.5.3,<6",
-    "alembic>=1.17.2,<2",
+    "celery>=5.6.2,<6",
+    "alembic>=1.18.0,<2",
     "psycopg2-binary>=2.9.11,<3",
-    "divbase-lib"
+    "sqlalchemy[asyncio]>=2.0.45,<2.1", # a minor bump is considered a major change for sqlalchemy
+    "divbase-lib" # always uses version in repo, handled by uv
 ]
 
 [build-system]
