--- a/packages/divbase-cli/pyproject.toml
+++ b/packages/divbase-cli/pyproject.toml
@@ -9,8 +9,8 @@ authors = [
 requires-python = ">=3.12"
 dependencies = [
     "divbase-lib==0.1.0.dev0",
-    "typer>=0.15.4",
-    "httpx>=0.28.1",
+    "typer>=0.21.1,<1",
+    "httpx>=0.28.1,<2",
 ]
 dynamic = ["version"]
 
