--- a/packages/divbase-lib/pyproject.toml
+++ b/packages/divbase-lib/pyproject.toml
@@ -8,10 +8,10 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "pyyaml>=6.0.2",
-    "boto3>=1.38.15",
-    "pandas>=2.2.3",
-    "pydantic>=2.12.5"
+    "pyyaml>=6.0.3,<7",
+    "boto3>=1.42.27,<2",
+    "pandas>=2.3.3,<3",
+    "pydantic>=2.12.5,<3"
 ]
 dynamic = ["version"]
 
