--- a/.github/workflows/publish-to-test-pypi.yaml
+++ b/.github/workflows/publish-to-test-pypi.yaml
@@ -25,6 +25,10 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version-file: ".python-version"
+
+      - name: Validate versions
+        run: |
+          uv run scripts/ci/validate_package_versions.py
       
       - name: Build packages
         run: |
