Add monitoring compose stack
In terminal, run docker network create divbase-observability
to create the external network, then spin up divbase_compose and then
spin up monitoring_compose to get prometheus, grafana, and cadvisor
running.

--- a/docker/divbase_compose.yaml
+++ b/docker/divbase_compose.yaml
@@ -5,6 +5,10 @@ networks:
     driver: bridge
   external-s3:
     driver: bridge
+  # External network for monitoring services defined in monitoring_compose.yaml
+  divbase-observability:
+    driver: bridge
+    external: true
 services:
   rabbitmq:
     image: "rabbitmq:alpine"
