--- a/docker/monitoring_compose.yaml
+++ b/docker/monitoring_compose.yaml
@@ -18,6 +18,9 @@ services:
       - divbase-observability
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=badpassword
+    volumes:
+      - ./grafana/provisioning:/etc/grafana/provisioning
+      - ./grafana/dashboards:/var/lib/grafana/dashboards
 
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
