--- a/.github/workflows/publish-to-pypi.yaml
+++ b/.github/workflows/publish-to-pypi.yaml
@@ -1,20 +1,27 @@
-name: Publish divbase-lib and divbase-cli packages to Test PyPI
+name: Publish divbase-lib and divbase-cli packages to PyPI
 on:
+  release:
+    types: [published]
   workflow_dispatch:
+
+  pull_request: # TODO - temporary, for testing purposes in this branch. 
+    branches: 
+      - main 
+      - mkdocs 
 
 jobs:
   build-divbase-lib-and-cli:
     uses: ./.github/workflows/build-pypi-packages.yaml
 
-  publish-to-test-pypi:
-    name: Publish divbase-lib and divbase-cli to Test PyPI
+  publish-to-pypi:
+    name: Publish divbase-lib and divbase-cli to PyPI
     if: github.repository == 'ScilifelabDataCentre/divbase'
     needs: build-divbase-lib-and-cli
     runs-on: ubuntu-latest
     permissions:
       id-token: write  # For trusted publishing
     environment:
-        name: testpypi
+        name: pypi
   
     steps:
       - name: Download previously built packages
@@ -23,7 +30,5 @@ jobs:
           name: Packages
           path: dist/
 
-      - name: Publish to Test PyPI
+      - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          repository-url: https://test.pypi.org/legacy/
