--- a/docker/prometheus.yml
+++ b/docker/prometheus.yml
@@ -5,3 +5,6 @@ scrape_configs:
   - job_name: 'cadvisor'
     static_configs:
       - targets: ['cadvisor:8080']
+  - job_name: 'rabbitmq'
+    static_configs:
+      - targets: ['rabbitmq:15692']
