ruff linting rules to prevent unavailable packages being used in development
In local dev, divbase-{api/lib/cli} all installed. When e.g. divbase-cli innstalled for user, only divbase-lib installed alongside it so an important to divbase-api results in a broken divbase-cli package. These rules prevent such problems from being possible

--- a/packages/divbase-cli/pyproject.toml
+++ b/packages/divbase-cli/pyproject.toml
@@ -45,3 +45,9 @@ path = "src/divbase_cli/__init__.py"
 
 [tool.uv.sources]
 divbase-lib = { workspace = true }
+
+[tool.ruff]
+extend = "../../ruff.toml"
+
+[tool.ruff.lint.flake8-tidy-imports.banned-api]
+"divbase_api" = { msg = "divbase-cli cannot use code from divbase-api. Move shared code to divbase-lib." }
