--- a/packages/divbase-api/pyproject.toml
+++ b/packages/divbase-api/pyproject.toml
@@ -33,3 +33,9 @@ divbase-worker = { workspace = true }
 
 [project.scripts]
 divbase-api = "divbase_api.divbase_api:main"
+
+[tool.ruff]
+extend = "../../ruff.toml"
+
+[tool.ruff.lint.flake8-tidy-imports.banned-api]
+"divbase_cli" = { msg = "divbase-api cannot use code from divbase-cli. Move shared code to divbase-lib." }
