--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,6 +89,7 @@ nav:
     - Setup Guide: development/setup.md
     - API: development/api.md
     - Database Migrations: development/database-migrations.md
+    - Celery Task Implementation: development/celery_task_implementation.md
     - Deployment: development/deployment.md
     - Documentation: development/documentation.md
     - Sending Emails: development/sending-emails.md
