--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,6 +91,7 @@ nav:
     - Database Migrations: development/database-migrations.md
     - Celery Task Implementation: development/celery_task_implementation.md
     - Bcftools Task Constraints: development/bcftools_task_constraints.md
+    - Task History Implementation: development/task_history_implementation.md
     - Deployment: development/deployment.md
     - Documentation: development/documentation.md
     - Sending Emails: development/sending-emails.md
