Setup a prometheus metrics server for workers
Intended to run in each worker and expose metrics on port 8001. Uses
prometheus-client and psutils ot collect CPU and RAM metrics.

--- a/packages/divbase-api/pyproject.toml
+++ b/packages/divbase-api/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "celery>=5.5.3,<6",
     "alembic>=1.17.2,<2",
     "psycopg2-binary>=2.9.11,<3",
+    "prometheus-client>=0.24.0,<1",
+    "psutil>=7.2.0,<8",
     "divbase-lib"
 ]
 
